--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="/dist/style.css" />
   </head>
   <body
-    class="min-h-screen lg:h-screen min-w-[375px] flex flex-col justify-center items-center"
+    class="min-h-screen lg:h-screen lg:max-h-screen min-w-[375px] flex flex-col justify-center items-center"
   >
     <header class="self-start w-full lg:hidden">
       <div class="p-8">
@@ -41,17 +41,17 @@
         <div class="justify-end lg:flex-1">
           <img class="w-full md:hidden" src="/images/hero-mobile.jpg" alt="" />
           <img
-            class="hidden max-w-[500px] ml-auto w-full md:block md:h-72 md:object-cover md:object-top lg:h-full"
+            class="hidden max-w-[500px] ml-auto w-full md:block md:h-72 md:object-cover md:object-top lg:h-full lg:min-h-[438px] xl:min-h-[480px]"
             src="/images/hero-desktop.jpg"
             alt=""
           />
         </div>
 
         <section
-          class="flex-1 xl:flex-[1.5] 2xl:flex-[2] py-16 lg:px-6 lg:py-12"
+          class="flex-1 xl:flex-[1.5] 2xl:flex-[2] py-16 lg:px-6 lg:py-12 lg:min-h-[438px] xl:min-h-[480px]"
         >
           <div
-            class="flex-col h-full flex mx-auto justify-between max-w-[373px]"
+            class="flex-col h-full flex mx-auto justify-between gap-6 max-w-[373px]"
           >
             <header class="hidden lg:block">
               <div class="p-8 lg:p-0">
